Replace Collections.emptyList() with List.of() and improve exception handling